--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sign_up">sign up</string>
     <string name="don_t_have_an_account"><u>don\'t have an account</u></string>
     <string name="i_have_an_account"><u>I have an account</u></string>
+    <string name="for_get_password"><u>For get password</u></string>
 </resources>
