--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="don_t_have_an_account"><u>don\'t have an account</u></string>
     <string name="i_have_an_account"><u>I have an account</u></string>
     <string name="for_get_password"><u>For get password</u></string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="api_key_map">AIzaSyALBMrzXjuXEg9RZEGl4fwTMCvMcw8bGhE</string>
 </resources>
